--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -1,25 +1,46 @@
 <head>
     <!-- Support stuff -->
     <script src="./javascript/http.js"></script>
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/autocomplete.css" />
+    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="stylesheet" href="./css/loader.css" />
+    <link rel="shortcut icon" href="./assets/images/favicon.ico">
 </head>
 
 <body>
-
+    <!-- <div class="loader" background-image="../assets/images/inpac.png"></div> -->
     <!-- add a form for entry, hide the code box -->
-    <div class="container">
-        <form id="form" onsubmit="return false;">
-            <input type="text" id="email_input" placeholder="Email"></input>
-            <input type="text" id="code_input" hidden placeholder="Code 000000"></input>
+    <div class="center-screen">
+        <div class="container">
+            <form id="email-form" onsubmit="return false;">
+                <div class="line">
+                    <input type="text" id="email_input" placeholder="Email">
+                    <button type="submit" class="email-submit-button submit-button" id="email_submit_button" onclick="submitEmailForm()">Get code</button>    
+                </input>
+            </div>
 
-            <button type="submit" onclick="submitLoginForm()">Get code</button>
-        </form>
-        <div id="autocomplete"></div>
+            <p id="email_error_message" class="error-message"></p>
+            </form>
+            <form id="code-form" autocomplete="off" onsubmit="return false;" hidden>
+                <div class="line">
+                    <input type="text" id="code_input" placeholder="Code 000000" maxlength="8"></input>
+                    <button type="submit" class="code-submit-button submit-button" id="code_submit_button" onclick="submitLoginForm()">Login</button>
+                </div>
+
+                <button id="resend" onclick="" disabled>Resend code (30)</button>
+                <button id="change" onclick="">Change email</button>
+                <p id="code_error_message" class="error-message"></p>
+            </form>
+        </div>
+        <div class="loader-container">
+            <div id="loader" class="pulsing-loader" hidden></div>
+        </div>
+    </div>
 
 </body>
 
 <head>
-    <script src="./javascript/main.js"></script>
-    <script src="./javascript/autocomplete.js"></script>
+    <script src="./javascript/cookieHandler.js"></script>
+    <script src="./javascript/logout.js"></script>
+    <script src="./javascript/login.js"></script>
+    <script src="./javascript/loader.js"></script>
 </head>
