--- a/frontend/html/dashboard.html
+++ b/frontend/html/dashboard.html
@@ -21,11 +21,15 @@
 
   <!-- The form -->
   <div class="form-popup" id="myForm">
-    <form onsubmit="return submitLogForm();" class="form-container">
+    <form onsubmit="return false;" class="form-container">
       <h1>Create Device Log</h1>
       <!-- location -->
       <label for="location"><b>Location</b></label>
       <input type="text" placeholder="Enter Location" name="device_location" required>
+
+      <!-- device owner -->
+      <label for="device_owner"><b>Device Owner</b></label>
+      <input type="text" placeholder="Enter Device Owner (e.g. RMIT...)" name="device_owner" required>
 
       <!-- device log action, move/install/repair/discard -->
       <label for="device_action"><b>Device Action</b></label>
@@ -52,12 +56,12 @@
       <input type="text" placeholder="Enter Device Name" name="device_name">
 
       <!-- device log description -->
-      <!-- <label for="device_description"><b>Action Description</b></label>
-      <input type="text" placeholder="Enter Device Description" name="device_description" required> -->
+      <label for="device_description"><b>Notes</b></label>
+      <textarea placeholder="Any additional notes (optional)" name="device_description"></textarea>
 
 
       <button type="submit" class="btn">Submit</button>
-      <button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
+      <button type="button" class="btn cancel" onclick="return closeForm()">Cancel</button>
     </form>
   </div>
 
