--- a/frontend/html/dashboard.html
+++ b/frontend/html/dashboard.html
@@ -12,9 +12,9 @@
     <p id="test-validator"></p>
   </div>
 
-  <div>
+  <!-- <div>
     <button id="logout" onclick="logoutUser()">Logout</button>
-  </div>
+  </div> -->
 
   <!-- A button to open the popup form -->
   <button class="open-button" onclick="openForm()">Log Device Movement</button>
@@ -25,11 +25,11 @@
       <h1>Create Device Log</h1>
       <!-- location -->
       <label for="location"><b>Location</b></label>
-      <input type="text" placeholder="Enter Location" name="device_location" required>
+      <input type="text" placeholder="Enter Location" id="device_location" name="device_location" required>
 
       <!-- device owner -->
       <label for="device_owner"><b>Device Owner</b></label>
-      <input type="text" placeholder="Enter Device Owner (e.g. RMIT...)" name="device_owner" required>
+      <input type="text" placeholder="Enter Device Owner (e.g. RMIT...)" id="device_owner" name="device_owner" required>
 
       <!-- device log action, move/install/repair/discard -->
       <label for="device_action"><b>Device Action</b></label>
@@ -41,26 +41,26 @@
       </select>
 
       <label for="device_model"><b>Device Model</b></label>
-      <input type="text" placeholder="Enter Device Model" name="device_model" required>
+      <input type="text" placeholder="Enter Device Model" id="device_model" name="device_model" required>
 
       <!-- manufacturer -->
       <label for="device_manufacturer"><b>Manufacturer</b></label>
-      <input type="text" placeholder="Enter Manufacturer" name="device_manufacturer" required>
+      <input type="text" placeholder="Enter Manufacturer" id="device_manufacturer" name="device_manufacturer" required>
 
       <!-- device serial number field -->
       <label for="device_serial_number"><b>Device Serial</b></label>
-      <input type="text" placeholder="Enter Device Serial" name="device_serial_number">
+      <input type="text" placeholder="Enter Device Serial" id="device_serial_number" name="device_serial_number">
 
       <!-- device name field -->
       <label for="device_name"><b>Device Name</b></label>
-      <input type="text" placeholder="Enter Device Name" name="device_name">
+      <input type="text" placeholder="Enter Device Name" id="device_name" name="device_name">
 
       <!-- device log description -->
       <label for="device_description"><b>Notes</b></label>
-      <textarea placeholder="Any additional notes (optional)" name="device_description"></textarea>
+      <textarea placeholder="Any additional notes (optional)" id="device_description"
+        name="device_description"></textarea>
 
-
-      <button type="submit" class="btn">Submit</button>
+      <button type="submit" class="btn" onclick="submitLogForm();">Submit</button>
       <button type="button" class="btn cancel" onclick="return closeForm()">Cancel</button>
     </form>
   </div>
