adding tables and general improvements

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- <div class="loader" background-image="../assets/images/inpac.png"></div> -->
     <!-- add a form for entry, hide the code box -->
-    <div class="center-screen">
+    <div class="no-scroll-center-screen">
         <div class="container">
             <form id="email-form" onsubmit="return false;">
                 <div class="line">
