--- a/frontend/html/dashboard.html
+++ b/frontend/html/dashboard.html
@@ -3,91 +3,56 @@
   <script src="./javascript/http.js"></script>
   <link rel="stylesheet" href="./css/dashboard/dashboard.css" />
   <link rel="shortcut icon" href="./assets/images/favicon.ico" />
+
+  <!-- Loading table stuff -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/2.1.8/css/dataTables.dataTables.css" />
+  <script src="https://cdn.datatables.net/2.1.8/js/dataTables.min.js"></script>
 </head>
 
 <body>
   <!-- <div class="loader" background-image="../assets/images/inpac.png"></div> -->
   <!-- add a form for entry, hide the code box -->
-  <div class="center-screen">
-    <p id="test-validator"></p>
+  <!-- <div class="center-screen"> -->
+  <p id="test-validator"></p>
+  <!-- </div> -->
+
+  <!-- <h2>Responsive Table with DataTables</h2> -->
+
+  <div class="center-element">
+    <div class="pulsing-loader" id="device-log-table-loader"></div>
   </div>
 
-  <h2>Responsive Table with DataTables</h2>
-
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <table summary="This table shows how to create responsive tables using Datatables' extended functionality"
-          class="table table-bordered table-hover dt-responsive">
-          <caption class="text-center">An example of a responsive table based on <a
-              href="https://datatables.net/extensions/responsive/" target="_blank">DataTables</a>:</caption>
-          <thead>
-            <tr>
-              <th>Country</th>
-              <th>Languages</th>
-              <th>Population</th>
-              <th>Median Age</th>
-              <th>Area (Km²)</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Argentina</td>
-              <td>Spanish (official), English, Italian, German, French</td>
-              <td>41,803,125</td>
-              <td>31.3</td>
-              <td>2,780,387</td>
-            </tr>
-            <tr>
-              <td>Australia</td>
-              <td>English 79%, native and other languages</td>
-              <td>23,630,169</td>
-              <td>37.3</td>
-              <td>7,739,983</td>
-            </tr>
-            <tr>
-              <td>Greece</td>
-              <td>Greek 99% (official), English, French</td>
-              <td>11,128,404</td>
-              <td>43.2</td>
-              <td>131,956</td>
-            </tr>
-            <tr>
-              <td>Luxembourg</td>
-              <td>Luxermbourgish (national) French, German (both administrative)</td>
-              <td>536,761</td>
-              <td>39.1</td>
-              <td>2,586</td>
-            </tr>
-            <tr>
-              <td>Russia</td>
-              <td>Russian, others</td>
-              <td>142,467,651</td>
-              <td>38.4</td>
-              <td>17,076,310</td>
-            </tr>
-            <tr>
-              <td>Sweden</td>
-              <td>Swedish, small Sami- and Finnish-speaking minorities</td>
-              <td>9,631,261</td>
-              <td>41.1</td>
-              <td>449,954</td>
-            </tr>
-          </tbody>
-          <tfoot>
-            <tr>
-              <td colspan="5" class="text-center">Data retrieved from <a
-                  href="http://www.infoplease.com/ipa/A0855611.html" target="_blank">infoplease</a> and <a
-                  href="http://www.worldometers.info/world-population/population-by-country/"
-                  target="_blank">worldometers</a>.</td>
-            </tr>
-          </tfoot>
-        </table>
-      </div>
-    </div>
-  </div>
-
-
+  <table id="device-log-table" class="display">
+    <thead>
+      <tr>
+        <th>Device ID</th>
+        <th>Device Name</th>
+        <th>Device Model</th>
+        <th>Device Serial</th>
+        <th>Device Owner</th>
+        <th>Device Location</th>
+        <th>Device Manufacturer</th>
+        <th>Last Action</th>
+        <th>Action Description</th>
+        <th>Action Timestamp</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- <tr>
+          <td>1</td>
+          <td>Device 1</td>
+          <td>Model 1</td>
+          <td>Serial 1</td>
+          <td>Owner 1</td>
+          <td>Location 1</td>
+          <td>Manufacturer 1</td>
+          <td>Action 1</td>
+          <td>Description 1</td>
+          <td>Timestamp 1</td>
+        </tr> -->
+    </tbody>
+  </table>
   <!-- <div>
     <button id="logout" onclick="logoutUser()">Logout</button>
   </div> -->
@@ -150,4 +115,5 @@
   <script src="./javascript/dashboard/dashboard.js"></script>
   <script src="./javascript/logout.js"></script>
   <script src="./javascript/addDeviceLog.js"></script>
+  <script src="./javascript/dataTableLocal.js"></script>
 </head>
