working table changes, modified headers, fix committing to DB

--- a/frontend/html/dashboard.html
+++ b/frontend/html/dashboard.html
@@ -61,7 +61,7 @@
   <button class="open-button" onclick="openForm()">Log Device Movement</button>
 
   <!-- The form -->
-  <div class="form-popup" id="myForm">
+  <div class="form-popup" id="deviceLogForm">
     <form onsubmit="return false;" class="form-container">
       <h1>Create Device Log</h1>
       <!-- location -->
@@ -101,8 +101,8 @@
       <textarea placeholder="Any additional notes (optional)" id="device_description"
         name="device_description"></textarea>
 
-      <button type="submit" class="btn" onclick="submitLogForm();">Submit</button>
-      <button type="button" class="btn cancel" onclick="return closeForm()">Cancel</button>
+      <button type="submit" class="btn" onclick="submitLogForm(); return false;">Submit</button>
+      <button type="button" class="btn cancel" onclick="closeForm(); return false;">Cancel</button>
     </form>
   </div>
 
