--- a/frontend/html/test_page.html
+++ b/frontend/html/test_page.html
@@ -46,7 +46,7 @@
     <button class="open-button" onclick="openForm()">Log Device Movement</button>
 
     <!-- The form -->
-    <div class="form-popup" id="myForm">
+    <div class="form-popup" id="deviceLogForm">
         <form onsubmit="return false;" class="form-container">
             <h1>Create Device Log</h1>
 
